- DutNgspice: Added native support for VA-modeled devices using OpenVAF
- DutView: save_db now allows saving only some sweep_keys in case of separate databases
- SweepDefTransSinus and SweepDefTransRamp: 2 different transient signal sweepdefs
- PySide6 as an option to replace PySide2 in the long run

### Changed

- DutNgspice now uses the verilog-code if a modelcard has one. This breaks the current behaviour. Next release will be 2.0.0
- Adjusted test_dut_ngspice to the new DutNgspice
- Updated to pyqtgraph 0.13.1. QApplication in plot.py from QWidgets is tried to use, if this does not work, fall back to old implementation from Qt.QtGui
- Renamed VAFile to VAFileMap to better reflect its nature. It is a mapping from filename (incl. rel path) to the file content (code).
- Importing now only uses pkgutil.find_loader("DMT.extraction") to speed up importing in case extraction module is not used.

### Removed

- Removed gitlab.com repository from pipeline.

## Fixed

- DataFrame.check_ss_cols: Fixed bug where column name was identified as a SS-Parameter falsely
- DataFrame.get_ss_para: Checking for ALL found SS-Parameters not just one.
- DutType: Now works with Python 3.11. Now the DutTypes are already "mixed" DutTypeFlag objects ready to be used.

## [1.7.0] - 2022.08.17

### Added

- Added local and full docker container for DMT-core. It is build in 3 steps
    - Builder: Builds ngspice, adms, trilinos and xyce
    - Base: copys from builder, texlive and installs only necessary runtime and python environment
    - full or Version_XX: Includes the latest or respective DMT install
- dmt example bash script which uses the docker container to run a python/dmt script.
- Generating CycloneDX SBOM from the container
- Added a RuntimeWarning when loading a parameter for a MCard which is out of bounds.
- Added a mdm-reader test case for SkywaterPDK raw measurement data
- Added an example to the docu how to read and handle the SkywaterPDK raw data in a DutLib